--- a/css/main.css
+++ b/css/main.css
@@ -175,22 +175,24 @@ footer a:not(.nav-link) {
 .fadeTop {
   opacity: 0; 
   transform: translate(0, 10vh);
-  transition: all 1s;
-}
+  transition: all 1s; }
 
 .fadeLeft {
   opacity: 0;
   transform: translate(10vh, 0vh);
-  transition: all 1s;
-}
+  transition: all 1s; }
 
 .fadeRight {
   opacity: 0;
   transform: translate(-10vh, 0vh);
-  transition: all 1s;
-}
+  transition: all 1s; }
 
 .visible {
   opacity: 1;
-  transform: translate(0, 0);
+  transform: translate(0, 0); }
+
+.icon:hover{
+  transform: scale(1.2);
+  transition: 200ms;
+  opacity: calc(100% - 40%);
 }
